Added Hockey Image
Added hockey_puck.png to resources and rebuilt
Also added icon to hockey item

--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,11 @@
     ],
     "resources": {
       "media": [
+        {
+          "type": "png",
+          "name": "hockey_puck",
+          "file": "hockey_puck.png"
+        }
       ]
     }
   }
