added API calling functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-./app/build
-./app/node_modules
-./app/.lock-waf_linux2_build
-./wscript
+app/build
+app/node_modules
+app/.lock-waf_linux2_build
+wscript
+app/.lock-waf_darwin_build
