--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "dependencies": {
     "pebble-clay": "^1.0.4",
-    "pebblejs": "^1.0.0"
+    "pebblejs": "^1.0.0",
+  "capabilities": [ "configurable" ]
   },
   "pebble": {
     "displayName": "Sports",
