--- a/app/package.json
+++ b/app/package.json
@@ -53,6 +53,10 @@
           "type": "png",
           "name": "menu_icon",
           "file": "menu_icon.png"
+        }, {
+          "type": "png",
+          "name": "no_games",
+          "file": "no_games.png"
         }
       ]
     }
