--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
   ],
   "private": true,
   "dependencies": {
+    "pebble-timeline-js": "^2.0.1",
     "pebblejs": "^1.0.0",
+    "timeline-js": "0.0.2",
     "vector2": "^0.1.1"
   },
   "pebble": {
