Various Changes (Read Description)
- Added color bars consisting of the team's primary color (visual flair, no real practicality). Platform aware, only working on basalt and emery devices. Shows beneath corresponding team's abbreviation
- Fixed game status position (in absence of a timestamp)
- Fixed Period/Quarter not showing correctly

--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Sports",
-  "author": "itsthered1",
+  "author": "Claudio Rojas",
   "version": "0.0.0",
   "keywords": [
-    "pebble-app"
+    "Sports"
   ],
   "private": true,
   "dependencies": {
@@ -24,9 +24,6 @@
     "watchapp": {
       "watchface": false
     },
-    "messageKeys": [
-      "timelineTeams"
-    ],
     "resources": {
       "media": [
         {
